tests/scripts/errors/lex/bad_escape_in_string.cdo
VAR s = "stray backslash at end \";
print(s);
